tests/baselines/reference/collisionRestParameterFunctionExpressions.errors.txt
==== tests/cases/compiler/collisionRestParameterFunctionExpressions.ts (2 errors) ====
    function foo() {
        function f1(_i: number, ...restParameters) { //_i is error
                    ~~~~~~~~~~
!!! collisionRestParameterFunctionExpressions.ts(2,17): error TS2224: Duplicate identifier '_i'. Compiler uses '_i' to initialize rest parameter.
            var _i = 10; // no error
        }
        function f1NoError(_i: number) { // no error
            var _i = 10; // no error
        }
        function f3(...restParameters) {
            var _i = 10; // no error
        }
        function f3NoError() {
            var _i = 10; // no error
        }
    
        function f4(_i: number, ...rest); // no codegen no error
        function f4(_i: string, ...rest); // no codegen no error
        function f4(_i: any, ...rest) { // error
                    ~~~~~~~
!!! collisionRestParameterFunctionExpressions.ts(17,17): error TS2224: Duplicate identifier '_i'. Compiler uses '_i' to initialize rest parameter.
        }
    
        function f4NoError(_i: number); // no error
        function f4NoError(_i: string); // no error
        function f4NoError(_i: any) { // no error
        }
    }